# AccessibleMFD

./: .gitignore  AccessibleMFD.cpp  AccessibleMFD.h  AccessibleMFD.rc  Autopilot.cpp  Autopilot.h  AutopilotController.cpp  AutopilotController.h  AutopilotModule.cpp  AutopilotModule.h  CLAUDE.md  CMakeLists.txt  Commands.cpp  Commands.h  Console.cpp  Console.h  Controls.cpp  Controls.h  Formatting.cpp  Formatting.h  MfdCapture.cpp  MfdCapture.h  OrbitalCalc.cpp  OrbitalCalc.h  Queries.cpp  Queries.h  Transfer.cpp  Transfer.h  resource.h  xr takeoff walkthrough.txt
docs/: orbiter-mfd-internals.md
frida/: README.md  capture_mfd.py  hook_mfd_text.js  mfd_reader.py
